smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/metadata/metadata-with-invalid-key.smithy
// Parse error at line 2, column 13 near `.b`: Expected: '=', but found '.'
metadata foo.bar = "baz"
